# rust_graphql_server

./: Cargo.toml  README.md
src/: main.rs
src/api/: health_check.rs  mod.rs  user.rs
src/api/routes/: mod.rs
src/api/schema/: mod.rs  user.rs
src/domain/user/: entities.rs  find_one.rs  hash_password.rs  mod.rs  register.rs  sign_in.rs
src/extensions/: authentication.rs
src/repositories/: mod.rs  user.rs
src/repositories/user/: adapter.rs  mod.rs
