[package]
name = "graphql_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "3.0.19"
async-graphql-warp = "3.0.19"
mongodb = { version = "2.1.0", features = ["tokio-runtime"] }
tokio = { version = "1.15.0", features = ["full"] }
warp = "0.3.2"
